# build_your_own_x_projects

./: README.md
EDA/: Cargo.toml
EDA/datasets/: my.parquet
EDA/src/: main.rs
EDA/src/expressions/: expressions.rs  mod.rs
EDA/src/io/: io.rs
codecrafters-http-server-rust/: README.md
codecrafters-http-server-rust/src/: main.rs
