[package]
name = "EDA"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "0.33.0",  features = ["lazy", "csv", "parquet", "strings"] }

[features]
write_output = ["polars/parquet"]

[build]
